# homepage

./: .gitignore  CNAME  LICENSE  Makefile  README.md  about.html  archive.html  atom.xml  build-yourself-arch-linux-1.html  build-yourself-arch-linux-2.html  build-yourself-arch-linux-3.html  contact.html  default.css  detecting-jvm-oome.html  go.mod  go.sum  granular-git-configuration.html  hash-collision.html  hdd-for-macos.html  hugo.toml  index.html  paper.html  readme.md  robots.txt  rss.xml  setup.sh  sitemap.xml  space-leader.html  whatsapp-tunneling.html  writers-block.html
about/: index.html
assets/: custom.css
atom.xml/: index.html
src/: about.md  blog.cabal  config.toml  contact.md  site.hs  stack.yaml
src/content/: about.md  contact.md
src/content/blog/: build-yourself-arch-linux-1.md  build-yourself-arch-linux-3.md  detecting-jvm-oome.md  hash-collision.md  hdd-for-macos.md  how-to-not-write-emacs-config-in-org.html  how-to-not-write-emacs-config-in-org.org  how-to-not-write-emacs-in-org.org  operability-and-rust.md  space-leader.md  writers-block.md
src/content/blog/build-yourself-arch-linux-2/: index.md
src/css/: default.css
src/hooks/: pre-commit
src/posts/: build-yourself-arch-linux-1.md  build-yourself-arch-linux-2.md  build-yourself-arch-linux-3.md  detecting-jvm-oome.md  granular-git-configuration.md  hash-collision.md  hdd-for-macos.md  paper.md  whatsapp-tunneling.md  writers-block.md
src/static/: default.css  gh-fork-ribbon.css
src/templates/: archive.html  default.html  index.html  page.html  post-list.html  sitemap.xml
(+85 files in other folders)
