name:               blog
version:            1.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.8.*
                  , filepath == 1.4.0.*
                  , split == 0.2.*
  ghc-options:      -threaded
  default-language: Haskell2010
